# sms-sender

./: Cargo.toml  README.md  docker-compose.yaml
api_gateway/: Dockerfile
api_gateway/nginx/: api_backends.conf  api_gateway.conf  api_json_errors.conf  api_keys.conf  nginx.conf
api_gateway/nginx/api_conf.d/: auth.conf  ping.conf
auth/: .env  Cargo.toml  Dockerfile  README.md  diesel.toml
auth/auth_service/: Cargo.toml
auth/auth_service/src/: jwt.rs  lib.rs  models.rs  schema.rs  tests.rs
auth/migrations/2022-01-09-042154_add_users/: down.sql  up.sql
auth/src/: auth_service.rs  jwt.rs  main.rs  tests.rs
desktop-client/: Cargo.toml  README.md
desktop_client/: Cargo.toml
desktop_client/src/: main.rs
ping/: Cargo.toml  Dockerfile
ping/src/: main.rs
