[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
diesel = { version = "1.4.4", features = ["postgres"] }
argonautica = { version = "0.2", features = ["simd"] }
dotenv = "0.15.0"
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"] }